# Datalog-Graph

./: .gitignore  CMakeLists.txt  Database.cpp  Database.h  DatalogProgram.cpp  DatalogProgram.h  Graph.cpp  Graph.h  Interpreter.cpp  Interpreter.h  Node.cpp  Node.h  Parameter.cpp  Parameter.h  Parser.cpp  Parser.h  Predicate.cpp  Predicate.h  README.md  Relation.cpp  Relation.h  Rule.cpp  Rule.h  Scanner.cpp  Scanner.h  Scheme.cpp  Scheme.h  Token.cpp  Token.h  Tuple.cpp  Tuple.h  main.cpp  run-tests.sh
project5-tests/: in0.txt  in51.txt  in52.txt  in54.txt  in58.txt  in59.txt  out50.txt  out51.txt  out52.txt  out54.txt  out58.txt  out59.txt  out61.txt  out62.txt
